--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <div class="sidebar">
-        sidebar
+        <div class="dash-title">ICON Dashboard</div>
+        <ul class="navigation">
+            <li class="nav-item">Home</li>
+            <li class="nav-item">Profile</li>
+            <li class="nav-item">Messages</li>
+            <li class="nav-item">History</li>
+            <li class="nav-item">Tasks</li>
+            <li class="nav-item">Communities</li>
+        </ul>
+        <ul class="branding">
+            <li class="brand-item">Settings</li>
+            <li class="brand-item">Support</li>
+            <li class="brand-item">Privacy</li>
+        </ul>
     </div>
     <div class="header">
         header
